<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Customer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="connect_blue">连接设备</string>
    <string name="device_info">设备信息：</string>
    <string name="stop_device">停止设备</string>
    <string name="camera">照相</string>
    <string name="send_photo">发送照片</string>
    <string name="received_order">气阀控制：</string>
    <string name="no_info">尚未收到相关设备信息</string>
    <string name="connect_state">尚无连接状态信息</string>
    <string name="no_order">123order</string>
    <string name="hint">请输入ip地址</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
