<?xml version="1.0" encoding="utf-8"?>    
<ScrollView    
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"    
    android:scrollbars="vertical"    
    android:fadingEdge="vertical">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
	android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/back1"
     >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <Button 
	        android:id="@+id/button_linkblue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:text="@string/connect_blue"
	        />
	    <TextView
	        android:id="@+id/ble_connect_state"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	      	android:text="@string/device_info" />
     </LinearLayout>
     
    <TextView 
        android:id="@+id/mTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_state" />
    <TextView 
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/back2"
        android:text="@string/no_info" />
    
    <ImageView   
        android:contentDescription="@string/app_name"
        android:layout_width="fill_parent"  
        android:layout_height="1dp"  
        android:background="#ffffff"  
        />
    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
    <EditText
        android:id="@+id/ip_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/button_camera"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:text="@string/camera" />
	    <Button
	        android:id="@+id/send_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/send_photo" />
	 </LinearLayout>
	<TextView 
	    android:text="医生发送信息："
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/> 
    <TextView 
        android:id="@+id/order_textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/back2"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_order" />
	 <TableLayout
	     android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="*">
		 <TableRow>
			 <Button
		        android:id="@+id/up_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="1号充" />
			 <Button
		        android:id="@+id/down_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="1号泄" />
		 </TableRow>
		 <TableRow>
			 <Button
		        android:id="@+id/up_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="2号冲" />
			 <Button
		        android:id="@+id/down_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="2号充" />
		 </TableRow>
		 <TableRow>
			 <Button
		        android:id="@+id/up_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="3号充" />
			 <Button
		        android:id="@+id/down_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="3号泄" />
		 </TableRow>
		 <TableRow>
			 <Button
		        android:id="@+id/up_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="4号充" />
			 <Button
		        android:id="@+id/down_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="4号泄" />
		 </TableRow>
		 <TableRow>
			 <Button
		        android:id="@+id/up_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="5号充" />
			 <Button
		        android:id="@+id/down_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="5号泄" />
		 </TableRow>
		 <TableRow
		     android:gravity="center">
			 <Button
		        android:id="@+id/key"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:text="一键泄气" />
		 </TableRow>
	 </TableLayout>
	 
	 

</LinearLayout>
</ScrollView>